--- a/index.html
+++ b/index.html
@@ -8,20 +8,12 @@
     <body>
         <h1>Portafolio de Isabela Pesántez</h1>
         <h2>Portafolio de mis diseños en HTML</h2>
-        <h2><a href="/5 Ejercicio HTML Boiler Plate Portafolio/public/movie-ranking.html">Proyecto de calificación de películas</a></h2>
+        <h2><a href="./public/movie-ranking.html">Proyecto de calificación de películas</a></h2>
         <img src="assets/images/movie-ranking.PNG">
-        <h2><a href="/5 Ejercicio HTML Boiler Plate Portafolio/public/birthday-invite.html">Proyecto de invitación de cumpleaños</a></h2>
+        <h2><a href="./public/birthday-invite.html">Proyecto de invitación de cumpleaños</a></h2>
         <img src="assets/images/birthday-invite.PNG">
 
         <a href="/5 Ejercicio HTML Boiler Plate Portafolio/public/about.html">Sobre mí</a>
         <a href="/5 Ejercicio HTML Boiler Plate Portafolio/public/contact.html">Contacto</a>
     </body>
 </html>
-
-<!-- TODO 2: Añadir el HTML de tus proyectos anteriores en la carpeta public -->
-
-
-<!-- TODO 5: Añadir un enlace a las páginas de los proyectos -->
-
-
-<!-- TODO 7: Añadir los enlaces a las páginas de Contacto y Sobre Mí -->
