--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2><a href="./public/birthday-invite.html">Proyecto de invitación de cumpleaños</a></h2>
         <img src="assets/images/birthday-invite.PNG">
 
-        <a href="/5 Ejercicio HTML Boiler Plate Portafolio/public/about.html">Sobre mí</a>
-        <a href="/5 Ejercicio HTML Boiler Plate Portafolio/public/contact.html">Contacto</a>
+        <a href="./public/about.html">Sobre mí</a>
+        <a href="./public/contact.html">Contacto</a>
     </body>
 </html>
